# ddns-a

./: .gitignore  .sloc-guard.toml  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  tarpaulin.toml
docs/: Implementation Plan.md  PROJECT_OVERVIEW.md  RUST_VERSION.md
src/: app.rs  lib.rs  main.rs  run.rs  run_tests.rs  time.rs
src/config/: cli.rs  cli_test.rs  cli_tests.rs  defaults.rs  error.rs  mod.rs  toml.rs  toml_tests.rs  validated.rs  validated_tests.rs
src/config/validated_tests/: filter_tests.rs  loading_tests.rs  mod.rs  precedence_tests.rs  runtime_tests.rs  webhook_tests.rs
src/monitor/: change.rs  change_tests.rs  debounce.rs  error.rs  listener.rs  mod.rs  poller.rs  poller_test.rs
src/monitor/hybrid/: mod.rs  monitor.rs  monitor_test.rs  stream.rs  stream_tests.rs  test_fixtures.rs
src/monitor/platform/: mod.rs  windows.rs  windows_test.rs
src/monitor/poller/: mod.rs  mod_tests.rs  monitor.rs  monitor_test.rs  monitor_tests.rs  stream.rs  stream_test.rs
src/network/: adapter.rs  fetcher.rs  filter.rs  filter_test.rs  filter_tests.rs  mod.rs  types.rs
src/network/platform/: mod.rs  windows.rs
src/state/: file.rs  mod.rs  mod_tests.rs
src/webhook/: client.rs  client_test.rs  error.rs  http.rs  http_tests.rs  mod.rs  retry.rs  retry_tests.rs  sender.rs  sender_tests.rs
